Внесен функционал 10 спринта Добавлено логирование