@@ -1,5 +1,6 @@
 package ru.yandex.practicum.filmorate.controller;
 
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.web.bind.annotation.*;
 import ru.yandex.practicum.filmorate.exception.ValidationException;
 import ru.yandex.practicum.filmorate.model.User;
@@ -9,6 +10,7 @@ import java.util.Collection;
 import java.util.HashMap;
 import java.util.Map;
 
+@Slf4j
 @RestController
 @RequestMapping("/users")
 public class UserController {
@@ -17,6 +19,7 @@ public class UserController {
 
     @GetMapping
     public Collection<User> findAll() {
+        log.info("Список фильмов выведен");
         return users.values();
     }
 
@@ -31,15 +34,17 @@ public class UserController {
 
     @PostMapping
     public User create(@RequestBody User user) {
-        user.setId(getNextId());
         userValidation(user);
+        user.setId(getNextId());
         users.put(user.getId(), user);
+        log.info("Пользователь: {} добавлен в базу", user);
         return user;
     }
 
     @PutMapping
     public User update(@RequestBody User newUser) {
         if (newUser.getId() == null) {
+            log.warn("Не указан id");
             throw new ValidationException("Id должен быть указан");
         }
         if (users.containsKey(newUser.getId())) {
@@ -47,29 +52,36 @@ public class UserController {
             userValidation(newUser);
             for (User usr : users.values()) {
                 if (usr.getEmail().equals(newUser.getEmail())) {
-                    throw new ValidationException("Этот имейл уже используется");
+                    log.warn("Попытка присвоить почту существующего пользователя");
+                    throw new ValidationException("Этот Email уже используется");
                 }
             }
             oldUser.setEmail(newUser.getEmail());
             oldUser.setName(newUser.getName());
             oldUser.setLogin(newUser.getLogin());
             oldUser.setBirthday(newUser.getBirthday());
+            log.info("Данные о пользователе: {} обновлены", oldUser);
             return oldUser;
         }
+        log.warn("Пользователь с указанным id не найден");
         throw new ValidationException("Пользователь с id = " + newUser.getId() + " не найден");
     }
 
     private void userValidation(User user) {
         if (!user.getEmail().contains("@")) {
+            log.warn("Ошибка в формате почты");
             throw new ValidationException("Неверная почта");
         }
         if (user.getBirthday().isAfter(LocalDate.now())) {
+            log.warn("Ошибка в дате рождения");
             throw new ValidationException("Неверная дата рождения");
         }
-        if (!user.getLogin().contains(" ")) {
+        if (user.getLogin().contains(" ")) {
+            log.warn("Ошибка в формате логина");
             throw new ValidationException("Неправильный формат логина");
         }
-        if (user.getName().isBlank()) {
+        if (user.getName() == null || user.getName().trim().isEmpty()) {
+            log.info("Пустое имя пользователя заменено на логин");
             user.setName(user.getLogin());
         }
     }
